--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
         <meta name="renderer" content="webkit" />
         <!-- 关闭winphone选中时高亮 -->
         <meta name="msapplication-tap-highlight" content="no" />
+        <!-- safari 主题色 -->
+        <meta name="theme-color" content="#ffffff" />
         <!-- ios 启动屏 -->
         <link
             rel="apple-touch-startup-image"
